--- a/hybrid.ipynb
+++ b/hybrid.ipynb
@@ -146,11 +146,11 @@
     "######### BELOW:preprocess the origdata for model input and predict using the model #######\n",
     "######### modify code in this block to predict ######################################\n",
     "        transform = transforms.Compose([\n",
-    "            transforms.ToPILImage(),  # 将 numpy 数组转换为 PIL 图像\n",
-    "            transforms.Grayscale(num_output_channels=1),  # 转换为单通道灰度图\n",
-    "            transforms.Resize((14, 14)),  # 调整图像尺寸为 14x14\n",
-    "            transforms.ToTensor(),  # 转换为张量\n",
-    "            transforms.Normalize((0.485,), (0.229,))  # 归一化，注意通道数只有1\n",
+    "            transforms.ToPILImage(),  \n",
+    "            transforms.Grayscale(num_output_channels=1), \n",
+    "            transforms.Resize((14, 14)),  \n",
+    "            transforms.ToTensor(), \n",
+    "            transforms.Normalize((0.485,), (0.229,))  \n",
     "])\n",
     "        data=transform(origdata)\n",
     "        data=data.reshape((1,1,14,14))\n",
